--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.2.6",
+    "lucide-react": "^0.561.0",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
